syntax = "proto3";

package books_service.books;

option go_package = "./gen/go/books;pb_books";

service BooksService {
  rpc FindByISBN(FindByISBNRequest) returns (FindByISBNResponse) {}
}

message Book {
  string isbn = 1;
  int64 count = 2;
  string name = 3;
  string author = 4;
  int64 id = 5;
}

// Reg

message FindByISBNRequest {
  string ISBN = 1;
}

message FindByISBNResponse {
  string error = 1;
  int64 status = 2;
  Book book = 3;
}

message FindByAuthorRequest {
  string error = 1;
  int64 status = 2;
  repeated Book books = 3;
}